--- a/my-first-app/src/app/auth-form/auth-form.component.html
+++ b/my-first-app/src/app/auth-form/auth-form.component.html
@@ -22,6 +22,6 @@
         <button class="submit" type="submit" [disabled]="form.invalid" mat-raised-button color="primary">Авторизоваться</button>
     </form>
     <ng-template #successMessage>
-        <h1>Успешная авторизация!</h1>
+        <h1 class="success">Успешная авторизация!</h1>
     </ng-template>
 </div>
