--- a/my-first-app/src/app/reg-form/reg-form.component.scss
+++ b/my-first-app/src/app/reg-form/reg-form.component.scss
@@ -29,3 +29,20 @@ mat-form-field.ng-valid input{
 .bold {
     font-weight: bold;
 }
+
+.success {
+    margin: 0;
+    color:#1c8c54;
+}
+
+.error {
+    color:#f44336;
+}
+
+p.error {
+    font-weight: bold;
+}
+
+h1.error {
+    margin-bottom: 10px;
+}
