Bug fix & part of auth logic

--- a/my-first-app/src/app/app.component.scss
+++ b/my-first-app/src/app/app.component.scss
@@ -22,6 +22,10 @@ ul.menu {
     color:#673ab7;
 }
 
+.exit:hover {
+    color:#673ab7;
+}
+
 .container {
     width: 450px;
     min-width: 310px;
