--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,10 +1,11 @@
 <ul class="menu">
-  <li [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Авторизация</li>
-  <li [routerLink]="['/registration']" routerLinkActive="active">Регистрация</li>
-  <li [routerLink]="['/posts']" routerLinkActive="active">Посты</li>
+  <li *ngIf="!login" [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Авторизация</li>
+  <li *ngIf="!login" [routerLink]="['/registration']" routerLinkActive="active">Регистрация</li>
+  <li *ngIf="login" [routerLink]="['/posts']" routerLinkActive="active">Посты</li>
   <!-- <li [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
     <mat-icon>home</mat-icon>
   </li> -->
+  <li *ngIf="login" class="exit" (click)="logout()"><mat-icon>exit_to_app</mat-icon></li>
 </ul>
 
 <router-outlet></router-outlet>
