--- a/my-first-app/src/app/app.component.scss
+++ b/my-first-app/src/app/app.component.scss
@@ -2,6 +2,10 @@ h1 {
     text-align: center;
 }
 
+p {
+    margin: 0;
+}
+
 ul.menu {
     display: flex;
     justify-content: center;
@@ -14,6 +18,8 @@ ul.menu {
 }
 
 .menu li {
+    display: flex;
+    gap: 5px;
     list-style-type: none;
     cursor: pointer;
 }
