--- a/my-first-app/src/app/home/home.component.scss
+++ b/my-first-app/src/app/home/home.component.scss
@@ -1,4 +1,13 @@
 p  {
-    margin: 20px 0px;
+    width: 80%;
+    margin: 10px auto 10px;
     text-align: center;
+}
+
+mat-icon {
+    width: 70px;
+    height: 70px;
+    margin-top: 20px;
+    font-size: 70px;
+    color: #673ab7;
 }
