--- a/my-first-app/src/app/posts/posts.component.scss
+++ b/my-first-app/src/app/posts/posts.component.scss
@@ -1,6 +1,62 @@
 @import url(../app.component.scss);
 
-ul {
-    width: 20%;
-    margin: auto;
+h3 {
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+table {
+  width: 100%;
+}
+
+.table-container {
+  margin: 20px auto 30px;
+  box-shadow: 0px 2px 3px 2px rgba(103, 58, 183, 0.4);
+}
+  
+.button-container {
+  margin: 20px;
+}
+
+.edit-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+}
+
+.mat-column-id {
+  width: 30px;
+  padding: 10px;
+  text-align: center;
+  border-right: 1px solid #673ab7;
+}
+
+.mat-column-text {
+  padding: 15px;
+  text-align: justify;
+}
+
+.mat-column-tools {
+  width: 300px;
+  padding: 15px;
+}
+
+.mat-mdc-row:hover {
+  background-color: #f0e8ff;
+}
+
+@media (max-width: 1000px) {
+
+  .table-container {
+    margin-bottom: 0px;
+  }
+  
+  .mat-column-tools {
+      width: 170px;
+  }
+
+  .edit-buttons {
+    justify-content: flex-start;
+  }
 }
