--- a/my-first-app/src/app/posts/posts.component.scss
+++ b/my-first-app/src/app/posts/posts.component.scss
@@ -10,31 +10,49 @@ table {
   width: 100%;
 }
 
-.error-message {
+.message {
   padding: 0px 20px;
   text-align: center;
   font-size: 1rem;
   font-weight: bold;
+}
+
+.error {
   color: #f44336;
 }
 
-.no-data {
+.loading {
+  color: #673ab7;
+}
+
+.data {
   padding: 20px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
 
-.spinner {
-  padding: 20px 0px 0px;
+.loading-shade {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.15);
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-mat-spinner {
+.spinner {
   margin: auto;
+  padding: 20px 0px 0px;
 }
 
 .table-container {
   margin: 20px auto 30px;
   box-shadow: 0px 2px 3px 2px rgba(103, 58, 183, 0.4);
 }
+
   
 .button-container {
   margin: 20px;
