--- a/my-first-app/src/app/posts/posts.component.scss
+++ b/my-first-app/src/app/posts/posts.component.scss
@@ -30,6 +30,10 @@ table {
   border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
 
+.post {
+  display: inline-flex;
+}
+
 .loading-shade {
   position: fixed;
   top: 0;
