--- a/my-first-app/src/app/post-form/post-form.component.html
+++ b/my-first-app/src/app/post-form/post-form.component.html
@@ -1,17 +1,28 @@
 <div class="container">
-    <h1>Новый пост</h1>
+    <h1>{{data.formTitle}}</h1>
     <form [formGroup]="form" (ngSubmit)="submit()" >
+        
         <mat-form-field>
             <mat-label>Заголовок</mat-label>
             <input type="text" placeholder="Заголовок" matInput formControlName="title">
+            <mat-error *ngIf="title.invalid && title.touched && title.errors['required']">{{ errorMessages['required'] }}</mat-error>
+            <mat-error *ngIf="title.invalid && title.touched && title.errors['minlength']">Заголовок {{ errorMessages['minLengthTitle'] }}</mat-error>
+            <mat-error *ngIf="title.invalid && title.touched && title.errors['maxlength']">Заголовок {{ errorMessages['maxLengthTitle'] }}</mat-error>
         </mat-form-field>
+
         <mat-form-field>
             <mat-label>Текст</mat-label>
             <textarea rows="10" placeholder="Текст" matInput formControlName="body"></textarea>
+            <mat-hint>{{body.value ? body.value.length : 0}}/500</mat-hint>
+            <mat-error *ngIf="body.invalid && body.touched && body.errors['required']">{{ errorMessages['required'] }}</mat-error>
+            <mat-error *ngIf="body.invalid && body.touched && body.errors['minlength']">Пост {{ errorMessages['minLengthPost'] }}<br>{{body.value ? body.value.length : 0}}/500</mat-error>
+            <mat-error *ngIf="body.invalid && body.touched && body.errors['maxlength']">Пост {{ errorMessages['maxLengthPost'] }}<br>{{body.value ? body.value.length : 0}}/500</mat-error>
         </mat-form-field>
+
         <div class="button-set">
             <button class="submit" type="submit" [disabled]="form.invalid" mat-raised-button color="primary">Сохранить</button>
             <button class="cancel" type="button" (click)="cancel()" mat-raised-button color="accent">Отмена</button>
         </div>
+
     </form>
 </div>
