--- a/my-first-app/src/app/posts/posts.component.html
+++ b/my-first-app/src/app/posts/posts.component.html
@@ -1,11 +1,10 @@
 <div class="button-container">
 
   <button *ngIf="dataSource.length" mat-raised-button color="primary" (click)="create()">Добавить пост</button>
-  <p *ngIf="error" class="error message">Ошибка загрузки, попробуйте снова!</p>
-  <p *ngIf="postError" class="error post message">Не удалось добавить пост, попробуйте снова</p>
-  <p *ngIf="deleteError" class="error post message">Не удалось удалить пост, попробуйте снова</p>
-  <p *ngIf="editError" class="error post message">Не удалось отредактировать пост, попробуйте снова</p>
-
+  <p *ngIf="error" class="error message">{{ messages['loadingError'] }}</p>
+  <p *ngIf="postError" class="error post message">{{ messages['addError'] }}</p>
+  <p *ngIf="deleteError" class="error post message">{{ messages['deleteError'] }}</p>
+  <p *ngIf="editError" class="error post message">{{ messages['editError'] }}</p>
 
   <div class="loading-shade" *ngIf="isLoadingResults && !error">
     <mat-spinner></mat-spinner>
@@ -25,8 +24,8 @@
     <ng-container matColumnDef="text">
       <th mat-header-cell *matHeaderCellDef>Пост</th>
       <td mat-cell *matCellDef="let post">
-        <h3>{{post.title}}</h3>
-        <p>{{post.body}}</p>
+        <h3>{{ post.title }}</h3>
+        <p class="postText">{{ post.body }}</p>
       </td>
     </ng-container>
   
@@ -44,8 +43,8 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <p *ngIf="error" class="error message data">Нет данных</p>
-  <p *ngIf="isLoadingResults && !error" class="loading message data">Загрузка данных</p>
+  <p *ngIf="error" class="error message data">{{ messages['noData'] }}</p>
+  <p *ngIf="isLoadingResults && !error" class="loading message data">{{ messages['loading'] }}</p>
 
   <mat-paginator [length]="100"
                 [pageSize]="10"
