Delete post confirmation, guards edit, code style edits

--- a/my-first-app/src/app/posts/posts.component.scss
+++ b/my-first-app/src/app/posts/posts.component.scss
@@ -10,6 +10,10 @@ table {
   width: 100%;
 }
 
+.postText {
+  word-break: break-word;
+}
+
 .message {
   padding: 0px 20px;
   text-align: center;
