--- a/my-first-app/src/app/components/post-form/post-form.component.scss
+++ b/my-first-app/src/app/components/post-form/post-form.component.scss
@@ -1,4 +1,4 @@
-@import url(../app.component.scss);
+@import url(../../app.component.scss);
 @import url(../reg-form/reg-form.component.scss);
 
 .container {
