--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,11 +1,19 @@
-<ul class="menu">
-  <!-- <li *ngIf="auth.isAuthenticated()" [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-    <mat-icon>home</mat-icon>
-  </li> -->
-  <li *ngIf="!auth.isAuthenticated()" [routerLink]="['/registration']" routerLinkActive="active"><p>Регистрация</p></li>
-  <li *ngIf="!auth.isAuthenticated()" [routerLink]="['/login']" routerLinkActive="active"><p>Авторизация</p></li>
-  <li *ngIf="auth.isAuthenticated()" [routerLink]="['/posts']" routerLinkActive="active"><p>Посты</p></li>
-  <li *ngIf="auth.isAuthenticated()" class="exit" (click)="auth.logout()"><p>Выход</p><mat-icon>exit_to_app</mat-icon></li>
-</ul>
+<nav class="navbar">
+  <h1>Angular Modules</h1>
 
-<router-outlet></router-outlet>
+  <ul>
+    <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/">Home</a></li>
+    <li routerLinkActive="active"><a routerLink="/about">About</a></li>
+  </ul>
+</nav>
+
+<div class="container">
+  <div class="card">
+
+    <router-outlet></router-outlet>
+
+  </div>
+</div>
+
+
+
