--- a/my-first-app/src/app/components/budget/budget.component.html
+++ b/my-first-app/src/app/components/budget/budget.component.html
@@ -1,8 +1,126 @@
-<p>budget works!</p>
-<p>budget works!</p>
-<p>budget works!</p>
-<p>budget works!</p>
-<p>budget works!</p>
-<p>budget works!</p>
-<p>budget works!</p>
+<div class="content">
+
+    <div class="table-block">
+
+        <div class="table-container header">
+            <h2>Доход</h2>
+        </div>
+    
+        <div class="table-container">
+            <table mat-table [dataSource]="incomeData">
+            
+                <ng-container matColumnDef="category">
+                  <th mat-header-cell *matHeaderCellDef>Категория</th>
+                  <td mat-cell *matCellDef="let post">Еда</td>
+                  <td mat-footer-cell *matFooterCellDef>Всего:</td>
+                </ng-container>
+              
+                <ng-container matColumnDef="item">
+                  <th mat-header-cell *matHeaderCellDef>Наименование</th>
+                  <td mat-cell *matCellDef="let post">
+                    <p class="postText">Пирожок с картошкой</p>
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+            
+                <ng-container matColumnDef="amount">
+                    <th mat-header-cell *matHeaderCellDef>Сумма</th>
+                    <td mat-cell *matCellDef="let post">
+                      <p class="postText">222</p>
+                    </td>
+                    <td mat-footer-cell *matFooterCellDef>1000</td>
+                </ng-container>
+            
+                <ng-container matColumnDef="percent">
+                    <th mat-header-cell *matHeaderCellDef>%</th>
+                    <td mat-cell *matCellDef="let post">
+                      <p class="postText">222</p>
+                    </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+            
+                <ng-container matColumnDef="tools">
+                  <th mat-header-cell *matHeaderCellDef></th>
+                  <td mat-cell *matCellDef="let post">
+                    <div class="edit-buttons">
+                        <button mat-raised-button color="accent"><mat-icon>edit</mat-icon></button>
+                        <button mat-raised-button color="warn"><mat-icon>delete</mat-icon></button>
+                        <button mat-raised-button color="primary"><mat-icon>done</mat-icon></button>
+                    </div>
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+              
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+            </table>
+        </div>
+
+    </div>
+
+    <div class="table-block">
+
+        <div class="table-container header">
+            <h2>Расход</h2>
+        </div>
+    
+        <div class="table-container">
+            <table mat-table [dataSource]="outcomeData">
+            
+                <ng-container matColumnDef="category">
+                    <th mat-header-cell *matHeaderCellDef>Категория</th>
+                    <td mat-cell *matCellDef="let post">Еда</td>
+                    <td mat-footer-cell *matFooterCellDef>Всего:</td>
+                </ng-container>
+                
+                <ng-container matColumnDef="item">
+                    <th mat-header-cell *matHeaderCellDef>Наименование</th>
+                    <td mat-cell *matCellDef="let post">
+                        <h3>Пирожок</h3>
+                        <p class="postText">с картошкой и грибами</p>
+                    </td>
+                    <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+                
+                <ng-container matColumnDef="amount">
+                    <th mat-header-cell *matHeaderCellDef>Сумма</th>
+                    <td mat-cell *matCellDef="let post">
+                        <p class="postText">222</p>
+                    </td>
+                    <td mat-footer-cell *matFooterCellDef>2000</td>
+                </ng-container>
+                
+                <ng-container matColumnDef="percent">
+                    <th mat-header-cell *matHeaderCellDef>%</th>
+                    <td mat-cell *matCellDef="let post">
+                        <p class="postText">1</p>
+                    </td>
+                    <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+                
+                <ng-container matColumnDef="tools">
+                    <th mat-header-cell *matHeaderCellDef></th>
+                    <td mat-cell *matCellDef="let post">
+                        <div class="edit-buttons">
+                            <button mat-raised-button color="accent"><mat-icon>edit</mat-icon></button>
+                            <button mat-raised-button color="warn"><mat-icon>delete</mat-icon></button>
+                            <button mat-raised-button color="primary"><mat-icon>done</mat-icon></button>
+                        </div>
+                    </td>
+                    <td mat-footer-cell *matFooterCellDef></td>
+                </ng-container>
+                
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+
+            </table>
+        </div>
+
+    </div>
+
+</div>
+
+
 
