--- a/my-first-app/src/app/components/budget/budget.component.html
+++ b/my-first-app/src/app/components/budget/budget.component.html
@@ -2,22 +2,34 @@
 
     <div class="table-block">
 
-        <div class="table-container header">
-            <h2>Доход</h2>
+        <div class="table-head">
+            <div class="table-container header"><h2>Доход</h2></div>
+            <button class="add-item" mat-raised-button color="primary">Добавить</button>
         </div>
-    
+       
         <div class="table-container">
             <table mat-table [dataSource]="incomeData">
             
+                <ng-container matColumnDef="check" sticky>
+                    <th mat-header-cell *matHeaderCellDef></th>
+                    <td mat-cell *matCellDef="let post">
+                        <mat-checkbox color="primary"></mat-checkbox>
+                    </td>
+                    <td mat-footer-cell *matFooterCellDef>Всего:</td>
+                </ng-container>
+
                 <ng-container matColumnDef="category">
                   <th mat-header-cell *matHeaderCellDef>Категория</th>
-                  <td mat-cell *matCellDef="let post">Еда</td>
-                  <td mat-footer-cell *matFooterCellDef>Всего:</td>
+                  <td mat-cell *matCellDef="let post">
+                    <p>Еда</p>
+                  </td>
+                  <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
               
                 <ng-container matColumnDef="item">
                   <th mat-header-cell *matHeaderCellDef>Наименование</th>
                   <td mat-cell *matCellDef="let post">
+                    <h3>Пирожок</h3>
                     <p class="postText">Пирожок с картошкой</p>
                   </td>
                   <td mat-footer-cell *matFooterCellDef></td>
@@ -26,7 +38,7 @@
                 <ng-container matColumnDef="amount">
                     <th mat-header-cell *matHeaderCellDef>Сумма</th>
                     <td mat-cell *matCellDef="let post">
-                      <p class="postText">222</p>
+                      <p>222</p>
                     </td>
                     <td mat-footer-cell *matFooterCellDef>1000</td>
                 </ng-container>
@@ -34,7 +46,7 @@
                 <ng-container matColumnDef="percent">
                     <th mat-header-cell *matHeaderCellDef>%</th>
                     <td mat-cell *matCellDef="let post">
-                      <p class="postText">222</p>
+                      <p>100%</p>
                     </td>
                   <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
@@ -43,9 +55,8 @@
                   <th mat-header-cell *matHeaderCellDef></th>
                   <td mat-cell *matCellDef="let post">
                     <div class="edit-buttons">
-                        <button mat-raised-button color="accent"><mat-icon>edit</mat-icon></button>
-                        <button mat-raised-button color="warn"><mat-icon>delete</mat-icon></button>
-                        <button mat-raised-button color="primary"><mat-icon>done</mat-icon></button>
+                        <button mat-icon-button color="primary"><mat-icon>edit</mat-icon></button>
+                        <button mat-icon-button color="warn"><mat-icon>delete</mat-icon></button>
                     </div>
                   </td>
                   <td mat-footer-cell *matFooterCellDef></td>
@@ -61,17 +72,28 @@
 
     <div class="table-block">
 
-        <div class="table-container header">
-            <h2>Расход</h2>
+        <div class="table-head">
+            <div class="table-container header"><h2>Расход</h2></div>
+            <button class="add-item" mat-raised-button color="primary">Добавить</button>
         </div>
     
         <div class="table-container">
             <table mat-table [dataSource]="outcomeData">
+
+                <ng-container matColumnDef="check" sticky>
+                    <th mat-header-cell *matHeaderCellDef></th>
+                    <td mat-cell *matCellDef="let post">
+                        <mat-checkbox color="primary"></mat-checkbox>
+                    </td>
+                    <td mat-footer-cell *matFooterCellDef>Всего:</td>
+                </ng-container>
             
                 <ng-container matColumnDef="category">
                     <th mat-header-cell *matHeaderCellDef>Категория</th>
-                    <td mat-cell *matCellDef="let post">Еда</td>
-                    <td mat-footer-cell *matFooterCellDef>Всего:</td>
+                    <td mat-cell *matCellDef="let post">
+                        <p>Еда</p>
+                    </td>
+                    <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
                 
                 <ng-container matColumnDef="item">
@@ -86,7 +108,7 @@
                 <ng-container matColumnDef="amount">
                     <th mat-header-cell *matHeaderCellDef>Сумма</th>
                     <td mat-cell *matCellDef="let post">
-                        <p class="postText">222</p>
+                        <p>222</p>
                     </td>
                     <td mat-footer-cell *matFooterCellDef>2000</td>
                 </ng-container>
@@ -94,7 +116,7 @@
                 <ng-container matColumnDef="percent">
                     <th mat-header-cell *matHeaderCellDef>%</th>
                     <td mat-cell *matCellDef="let post">
-                        <p class="postText">1</p>
+                        <p>10%</p>
                     </td>
                     <td mat-footer-cell *matFooterCellDef></td>
                 </ng-container>
@@ -103,9 +125,8 @@
                     <th mat-header-cell *matHeaderCellDef></th>
                     <td mat-cell *matCellDef="let post">
                         <div class="edit-buttons">
-                            <button mat-raised-button color="accent"><mat-icon>edit</mat-icon></button>
-                            <button mat-raised-button color="warn"><mat-icon>delete</mat-icon></button>
-                            <button mat-raised-button color="primary"><mat-icon>done</mat-icon></button>
+                            <button mat-icon-button color="primary"><mat-icon>edit</mat-icon></button>
+                            <button mat-icon-button color="warn"><mat-icon>delete</mat-icon></button>
                         </div>
                     </td>
                     <td mat-footer-cell *matFooterCellDef></td>
