--- a/my-first-app/src/app/components/budget/budget.component.scss
+++ b/my-first-app/src/app/components/budget/budget.component.scss
@@ -1,30 +1,63 @@
 @import url(../posts/posts.component.scss);
 
-h2 {
+h2, h3 {
     margin: 0;
 }
 
-.edit-buttons mat-icon {
-    margin: 0;
+.table-head {
+    height: 42px;
 }
 
 .header {
-    display: inline-flex;
+    display: block;
+    float: left;
+    height: 100%;
     margin-top: 0;
     padding: 5px 16px;
+    box-sizing: border-box;
+}
+
+.add-item {
+    display: block;
+    float: left;
+    height: 100%;
+    margin-left: 20px;
 }
 
 .content {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    gap: 20px;
-    padding: 20px;
+    gap: 40px;
+    padding: 20px 40px;
     box-sizing: border-box;
 }
 
 .table-block {
     flex: 1;
+}
+
+@media (max-width: 1000px) {
+    
+    .content {
+        gap: 20px;
+        padding: 20px;
+    }
+}
+
+@media (max-width: 600px) {
+    
+    .content {
+        flex: auto;
+        flex-direction: column;
+        padding: 10px 0px 20px;
+    }
+
+    .table-block {
+        width: 100%;
+        padding: 5px 0px;
+        overflow-x: scroll;
+    }
 }
 
 .table-container {
@@ -35,4 +68,37 @@ h2 {
     font-weight: bold;
     background: #673ab7;
     color: #fff;
+}
+
+.mat-column-check {
+    width: 60px;
+    padding: 0;
+    border-right: 1px solid #673ab7;
+    text-align: center;
+}
+
+.mat-column-amount {
+    width: 110px;
+    text-align: center;
+}
+
+.mat-column-percent {
+    width: 70px;
+    text-align: center;
+}
+
+.mat-column-tools {
+    width: 140px;
+}
+
+.mat-mdc-footer-cell:first-child {
+    padding-left: 10px;
+}
+
+.edit-buttons {
+    justify-content: center;
+
+    & mat-icon {
+        margin: 0;
+    }
 }
