--- a/my-first-app/src/app/components/budget/budget.component.scss
+++ b/my-first-app/src/app/components/budget/budget.component.scss
@@ -1,29 +1,3 @@
-@import url(../posts/posts.component.scss);
-
-h2, h3 {
-    margin: 0;
-}
-
-.table-head {
-    height: 42px;
-}
-
-.header {
-    display: block;
-    float: left;
-    height: 100%;
-    margin-top: 0;
-    padding: 5px 16px;
-    box-sizing: border-box;
-}
-
-.add-item {
-    display: block;
-    float: left;
-    height: 100%;
-    margin-left: 20px;
-}
-
 .content {
     display: flex;
     justify-content: space-between;
@@ -33,7 +7,7 @@ h2, h3 {
     box-sizing: border-box;
 }
 
-.table-block {
+app-budget-table {
     flex: 1;
 }
 
@@ -53,52 +27,9 @@ h2, h3 {
         padding: 10px 0px 20px;
     }
 
-    .table-block {
+    app-budget-table {
         width: 100%;
         padding: 5px 0px;
         overflow-x: scroll;
-    }
-}
-
-.table-container {
-    margin-bottom: 0;
-}
-
-.mat-mdc-footer-row {
-    font-weight: bold;
-    background: #673ab7;
-    color: #fff;
-}
-
-.mat-column-check {
-    width: 60px;
-    padding: 0;
-    border-right: 1px solid #673ab7;
-    text-align: center;
-}
-
-.mat-column-amount {
-    width: 110px;
-    text-align: center;
-}
-
-.mat-column-percent {
-    width: 70px;
-    text-align: center;
-}
-
-.mat-column-tools {
-    width: 140px;
-}
-
-.mat-mdc-footer-cell:first-child {
-    padding-left: 10px;
-}
-
-.edit-buttons {
-    justify-content: center;
-
-    & mat-icon {
-        margin: 0;
     }
 }
