--- a/my-first-app/src/app/components/budget-table/budget-table.component.html
+++ b/my-first-app/src/app/components/budget-table/budget-table.component.html
@@ -1,16 +1,16 @@
 <div class="table-block">
 
     <div class="table-head">
-        <div class="table-container header"><h2>{{ tableName }}</h2></div>
+        <div class="table-container header"><h2>{{ table.name }}</h2></div>
         <button class="add-item" mat-raised-button color="primary">Добавить</button>
     </div>
    
     <div class="table-container">
-        <table mat-table [dataSource]="dataSource">
+        <table mat-table [dataSource]="table.dataSource">
         
             <ng-container matColumnDef="check" sticky>
                 <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let post">
+                <td mat-cell *matCellDef="let point">
                     <mat-checkbox color="primary"></mat-checkbox>
                 </td>
                 <td mat-footer-cell *matFooterCellDef>Всего:</td>
@@ -18,40 +18,40 @@
 
             <ng-container matColumnDef="category">
               <th mat-header-cell *matHeaderCellDef>Категория</th>
-              <td mat-cell *matCellDef="let post">
-                <p>Еда</p>
+              <td mat-cell *matCellDef="let point">
+                <p>{{ point.category }}</p>
               </td>
               <td mat-footer-cell *matFooterCellDef></td>
             </ng-container>
           
             <ng-container matColumnDef="item">
               <th mat-header-cell *matHeaderCellDef>Наименование</th>
-              <td mat-cell *matCellDef="let post">
-                <h3>Пирожок</h3>
-                <p class="postText">Пирожок с картошкой</p>
+              <td mat-cell *matCellDef="let point">
+                <h3>{{ point.item.title }}</h3>
+                <p class="postText">{{ point.item.description }}</p>
               </td>
               <td mat-footer-cell *matFooterCellDef></td>
             </ng-container>
         
             <ng-container matColumnDef="amount">
                 <th mat-header-cell *matHeaderCellDef>Сумма</th>
-                <td mat-cell *matCellDef="let item">
-                  <p></p>
+                <td mat-cell *matCellDef="let point">
+                  <p>{{ point.amount | currency:'RUB':'symbol-narrow':'1.1-1' }}</p>
                 </td>
                 <td mat-footer-cell *matFooterCellDef>1000</td>
             </ng-container>
         
             <ng-container matColumnDef="percent">
                 <th mat-header-cell *matHeaderCellDef>%</th>
-                <td mat-cell *matCellDef="let post">
-                  <p>100%</p>
+                <td mat-cell *matCellDef="let point">
+                  <p>{{ point.percent | percent }}</p>
                 </td>
               <td mat-footer-cell *matFooterCellDef></td>
             </ng-container>
         
             <ng-container matColumnDef="tools">
               <th mat-header-cell *matHeaderCellDef></th>
-              <td mat-cell *matCellDef="let post">
+              <td mat-cell *matCellDef="let point">
                 <div class="edit-buttons">
                     <button mat-icon-button color="primary"><mat-icon>edit</mat-icon></button>
                     <button mat-icon-button color="warn"><mat-icon>delete</mat-icon></button>
