--- a/my-first-app/src/app/components/budget/budget.component.html
+++ b/my-first-app/src/app/components/budget/budget.component.html
@@ -1,7 +1,6 @@
 <div class="content">
 
-    <app-budget-table></app-budget-table>
-    <app-budget-table></app-budget-table>
+    <app-budget-table *ngFor="let t of tables" [table]="t"></app-budget-table>
 
 </div>
 
