--- a/my-first-app/src/app/components/budget/budget.component.html
+++ b/my-first-app/src/app/components/budget/budget.component.html
@@ -4,5 +4,7 @@
 
 </div>
 
-
-
+<div class="log-buttons">
+    <button mat-raised-button class="show-checked" color="primary" (click)="showChecked(0)">Log checked Income</button>
+    <button mat-raised-button class="show-checked" color="primary" (click)="showChecked(1)">Log checked Outcome</button>
+</div>
