Budget point deletion

--- a/my-first-app/src/app/components/budget-table/budget-table.component.html
+++ b/my-first-app/src/app/components/budget-table/budget-table.component.html
@@ -51,10 +51,10 @@
         
             <ng-container matColumnDef="tools">
               <th mat-header-cell *matHeaderCellDef></th>
-              <td mat-cell *matCellDef="let point">
+              <td mat-cell *matCellDef="let point; let i = index">
                 <div class="edit-buttons">
                     <button mat-icon-button color="primary"><mat-icon>edit</mat-icon></button>
-                    <button mat-icon-button color="warn"><mat-icon>delete</mat-icon></button>
+                    <button mat-icon-button color="warn" (click)="deletePoint(table.name, i)"><mat-icon>delete</mat-icon></button>
                 </div>
               </td>
               <td mat-footer-cell *matFooterCellDef></td>
