--- a/my-first-app/src/app/components/budget-table/budget-table.component.html
+++ b/my-first-app/src/app/components/budget-table/budget-table.component.html
@@ -10,8 +10,8 @@
         
             <ng-container matColumnDef="check" sticky>
                 <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let point">
-                    <mat-checkbox color="primary" [(ngModel)]="point.check"></mat-checkbox>
+                <td mat-cell *matCellDef="let point; let i = index">
+                    <mat-checkbox color="primary" [(ngModel)]="point.check" (click)="updateCheck(table.name)"></mat-checkbox>
                 </td>
                 <td mat-footer-cell *matFooterCellDef>Всего:</td>
             </ng-container>
@@ -86,5 +86,5 @@
             <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
         </table>
     </div>
-    
+
 </div>
