--- a/my-first-app/src/app/components/budget/budget.component.scss
+++ b/my-first-app/src/app/components/budget/budget.component.scss
@@ -53,5 +53,15 @@
         padding: 5px 0px;
     }
 }
+  
+.cdk-drag-placeholder {
+    opacity: 0;
+}
 
+.cdk-drag-animating {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
 
+.content.cdk-drop-list-dragging .content-block:not(.cdk-drag-placeholder) {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
